<resources>
    <string name="app_name">Cronograma Capilar</string>
    <string name="tipo_de_tratamento">Tipo de tratamento</string>
    <string name="last_date">Data da última aplicação</string>
    <string name="observations">Observações</string>
    <string name="mark_as_done">Marcar como feito</string>
    <string name="edit">Editar</string>
    <string name="delete">Deletar</string>
    <string name="save">Salvar</string>
    <string name="next_application_n">Próxima aplicação: %1$s</string>
    <string name="last_application_n">Última aplicação: %1$s</string>
    <plurals name="in_n_days">
        <item quantity="one">Em 1 dia</item>
        <item quantity="other">Em %1$d dias</item>
    </plurals>
    <string name="today">Hoje!</string>
    <plurals name="n_days_late">
        <item quantity="one">1 dia atrasado</item>
        <item quantity="other">%1$d dias atrasado</item>
    </plurals>
    <string name="error_last_date">"Selecione uma data  "</string>
    <string name="repeats_each">Repete a cada</string>
    <string name="_1">1</string>
    <string name="see_details">Ver detalhes</string>
    <string name="error_treatment_empty">Selecione um tipo de tratamento</string>
    <string name="error_number_of_repeats">Número não pode ser menor que 0</string>
    <string name="menu_button_description">Botão de menu</string>
    <string name="next_application">Próxima aplicação</string>
    <string name="last_application">Última aplicação</string>
    <string name="other_treatment">Outro</string>
    <string name="error_other_treatment_empty">Tipo de tratamento não pode estar vazio</string>
    <string name="description_icon_type">Ícone para o tipo de tratamento</string>
    <string name="description_icon_repeats">Ícone para a frequência de aplicação</string>
    <string name="description_icon_date">Ícone para a data</string>
    <string name="confirm_delete_message">Deletar este tratamento?</string>
    <string name="cancel">Cancelar</string>
    <string name="showcase_create_treatment_title">Crie um tratamento</string>
    <string name="showcase_create_treatment_text">Clique no botão para criar um novo tratamento</string>
    <string name="title_notification_today">Hoje é dia de %1$s! 🌸</string>
    <string name="title_notification_today_h">Hoje é dia de %1$s! 💦</string>
    <string name="title_notification_today_r">Hoje é dia de %1$s! 🥥</string>
    <string name="title_notification_today_n">Hoje é dia de %1$s! 💪</string>
    <string name="title_notification_today_a">Hoje é dia de %1$s! 🍎</string>
    <string name="title_notification_late">⚠️ Você fez %1$s?</string>
    <string name="channel_id">alarme_tratamento</string>
    <string-array name="treatments_array">
        <item>Tipo de tratamento</item>
        <item>Acidificação</item>
        <item>Hidratação</item>
        <item>Nutrição</item>
        <item>Reconstrução</item>
        <item>Outro</item>
    </string-array>
    <string-array name="time_singular_array">
        <item>dia</item>
        <item>semana</item>
        <item>mês</item>
        <item>ano</item>
    </string-array>
    <string-array name="time_plural_array">
        <item>dias</item>
        <item>semanas</item>
        <item>meses</item>
        <item>anos</item>
    </string-array>
</resources>
