<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/spinner">

        <Spinner
            android:paddingVertical="5dp"
            android:id="@+id/treatment_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tipo_de_tratamento"
            style="@style/Widget.AppCompat.Spinner.DropDown.ActionBar" />
    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_marginVertical="20dp"
        android:layout_height="1dp"
        android:background="@color/divider" />

        <TextView
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/last_date" />

        <EditText
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            android:id="@+id/last_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/last_date"
            android:inputType="date"
            android:importantForAutofill="no" />

    <View
        android:layout_width="match_parent"
        android:layout_marginVertical="20dp"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <TextView
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/repeats_each" />

    <LinearLayout
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/number_of_repeats"
            android:layout_width="50dp"
            android:textAlignment="center"
            android:layout_height="fill_parent"
            android:digits="0123456789"
            android:inputType="number"
            android:background="@color/spinner"
            android:maxLength="2"
            android:layout_marginEnd="10dp"
            android:text="@string/_1"
            android:hint="@string/_1"
            android:importantForAutofill="no" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/spinner">

            <com.example.cronogramacapilar.DynamicWidthSpinner
                android:id="@+id/unit_of_repeats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:dropDownWidth="200dp"
                style="@style/Widget.AppCompat.Spinner.DropDown.ActionBar" />
        </RelativeLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_marginVertical="20dp"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <TextView
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/observations"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <EditText
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:id="@+id/observations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/observations"
        android:inputType="text|textMultiLine"
        android:importantForAutofill="no" />
</LinearLayout>